
NEW FEATURES
* An option in compare.synds() to add values of a selected utility measure 
  to names of a plot facets (`utility.to.plot` argument).

CHANGES
* Optional parameters can be set for syn.norm(), syn.lognorm(), syn.sqrtnorm(),
  syn.cubertnorm(), syn.normrank(), syn.pmm().
* In multi.compare() if `msel = NULL`, pooled synthetic data copies are 
  compared with the original data.  

BUG FIXES
* In multi.compare() default colour and fill scales restored for ggplot() to
  to allow for more than 9 levels/synthetic data sets to be plotted. 


synthpop 1.7-0
---------------

NEW FEATURES
* New function utility.tables() summarises oneway, two- or three-way tables 
  of utility by utility.tab(). Plots and tables of utility measures can be 
  produced.
* Functions utility.gen(), utility.tab(), and compare.synds() can be used 
  to assess the utility of synthetic data sets that were created NOT using 
  synthpop. They have to be provided as a data.frame or a list.
* utility.gen() and utility.tab() have a parameter `k.syn` to indicate that 
  the sample size itself has been synthesised. The default value is `FALSE` 
  that will apply to synthetic data created by synthpop. 
* The following additional statstics for each synthesis are calculated in 
  utility.tab(): "G" - the adjusted likelihood ratio chi-squared statistic 
  for comparing tables with original and synthesised values, 
  "JSD" - the Jensen-Shannon distance between the tables with original and 
* These additional statistics are computed by utility.tab() and utility.gen(): 
  "PO50" - the percentage over 50% of each synthetic data set where the model 
  used to predict real or synthetic is correct; "SPECKS" the Kolmogorov-Smirnov 
  distance comparing the prpensity scores for the synthetic and original data.
* Parameter `print.flag` is added to utility.gen() and utility.tab() to 
  suppress, if desired, output for simulations.
* compare.synds() produces a table, tab.res, that gives the oneway utility